--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
-
+@import './components/defaultStyle/default.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
