--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,7 +1,7 @@
 .friendList{
   width: 250px;
   margin: 0px auto;
-  background: #e6dfec;
+  background: var(--bg-friendList);
   padding: 30px;
   border-radius: 10px;
 }
